--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,15 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@tabler/icons-react": "^2.47.0",
+    "@tanstack/eslint-plugin-query": "^5.20.1",
+    "@tanstack/react-query": "^5.25.0",
+    "@tanstack/react-query-devtools": "^5.25.0",
+    "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "embla-carousel-react": "^8.0.0",
     "framer-motion": "^11.0.8",
+    "lucide-react": "^0.344.0",
     "next": "14.1.2",
     "react": "^18",
     "react-dom": "^18",
