--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,13 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.9",
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
+    "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@tabler/icons-react": "^2.47.0",
     "@tanstack/eslint-plugin-query": "^5.20.1",
     "@tanstack/react-query": "^5.25.0",
@@ -21,16 +26,19 @@
     "clsx": "^2.1.0",
     "embla-carousel-react": "^8.0.0",
     "framer-motion": "^11.0.8",
+    "heroicons": "^2.1.1",
     "lucide-react": "^0.344.0",
     "next": "14.1.2",
     "next-auth": "^4.24.7",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
     "sonner": "^1.4.3",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "typescript": "^5",
