--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,5 @@
 NEXTAUTH_URL="http://localhost:3000"
-NEXTAUTH_SECRET="CF5jOx5abJIu2S37EaMKWK8HTZO6dGcvxgmeWNbDnhg=
-"
+NEXTAUTH_SECRET="CF5jOx5abJIu2S37EaMKWK8HTZO6dGcvxgmeWNbDnhg="
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_cHVtcGVkLWRvbHBoaW4tNC5jbGVyay5hY2NvdW50cy5kZXYk
+CLERK_SECRET_KEY=sk_test_AFVqkWXShYA2XLq0gWfRGPAqEQOvTtsxj90dKuqSXm
 
